--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "navbar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://topdeveloper701.github.io",
+  "homepage": "https://toprate425.github.io/dappified",
   "dependencies": {
     "-": "0.0.1",
     "@material-ui/core": "^4.12.3",
